# amai_ocl

./: .gitignore  README.md  TODO.md  generate_adversarial_buyers.py  pyproject.toml  readme_cn.md
aimai_ocl/: __init__.py  __main__.py  adapters.py  agenticpay_runtime.py  attribution.py  attribution_counterfactual.py  attribution_shapley.py  config.py  control.py  coordinator.py  evaluation_metrics.py  experiment.py  experiment_config.py  model_runtime.py  plugin_registry.py  runner.py  schemas.py  script_utils.py  statistics.py
benchmarks/conversational_consumer_selection_v1/: README.md  pyproject.toml
benchmarks/conversational_consumer_selection_v1/src/conversational_consumer_selection/: __init__.py  demo.py  dialogue_demo.py  env.py  governance.py  metrics.py  policies.py  runner.py  schemas.py  simulator.py  single_agent_demo.py  tasks.py  v0_governance_demo.py  v0_llm_governance_demo.py  walkthrough.py
benchmarks/conversational_consumer_selection_v1/src/conversational_consumer_selection/agents/: __init__.py  single_agent.py
benchmarks/conversational_consumer_selection_v1/src/conversational_consumer_selection/parsers/: __init__.py
benchmarks/conversational_consumer_selection_v1/src/conversational_consumer_selection/surfaces/: __init__.py  buyer_surface.py  dialogue_decorator.py  history_renderer.py  opening_renderer.py
benchmarks/conversational_consumer_selection_v1/tests/: test_benchmark.py
configs/: ablation.yaml  adversarial_buyers.json  batch.yaml  benchmark.yaml  default.yaml  demo.yaml  paired.yaml  shapley.yaml
docs/: NEXT_LAYER_HANDOFF.md  (+1 more)
(+44 files in other folders)
