[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conversational-consumer-selection"
version = "0.1.0"
description = "Standalone benchmark for conversational consumer selection"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["conversational_consumer_selection*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
